parser/ProjectParser.py
# Generated from c:\Users\28D\Downloads\VSB material\3 - letni semestr\PJP\project\ProjectParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ProjectParser ( Parser ):

    grammarFileName = "ProjectParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'bool'", "'else'", "'float'", "'if'", 
                     "'int'", "'read'", "'string'", "'while'", "'write'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "';'", "','", "'='", "'||'", 
                     "'&&'", "'=='", "'!'", "'!='", "'<'", "'>'", "'+'", 
                     "'-'", "'.'", "'*'", "'/'", "'%'" ]

    symbolicNames = [ "<INVALID>", "BOOL", "ELSE", "FLOAT", "IF", "INT", 
                      "READ", "STRING", "WHILE", "WRITE", "INT_LITERAL", 
                      "FLOAT_LITERAL", "BOOL_LITERAL", "STRING_LITERAL", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", "COMMA", 
                      "ASSIGN", "OR", "AND", "EQUAL", "NOT", "NOTEQUAL", 
                      "LT", "GT", "ADD", "SUB", "CONCAT", "MUL", "DIV", 
                      "MOD", "WS", "LINE_COMMENT", "IDENTIFIER" ]

    RULE_program = 0
    RULE_literal = 1
    RULE_statement = 2
    RULE_block = 3
    RULE_identifierList = 4
    RULE_exprList = 5
    RULE_variableType = 6
    RULE_expr = 7

    ruleNames =  [ "program", "literal", "statement", "block", "identifierList", 
                   "exprList", "variableType", "expr" ]

    EOF = Token.EOF
    BOOL=1
    ELSE=2
    FLOAT=3
    IF=4
    INT=5
    READ=6
    STRING=7
    WHILE=8
    WRITE=9
    INT_LITERAL=10
    FLOAT_LITERAL=11
    BOOL_LITERAL=12
    STRING_LITERAL=13
    LPAREN=14
    RPAREN=15
    LBRACE=16
    RBRACE=17
    SEMI=18
    COMMA=19
    ASSIGN=20
    OR=21
    AND=22
    EQUAL=23
    NOT=24
    NOTEQUAL=25
    LT=26
    GT=27
    ADD=28
    SUB=29
    CONCAT=30
    MUL=31
    DIV=32
    MOD=33
    WS=34
    LINE_COMMENT=35
    IDENTIFIER=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ProjectParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.StatementContext)
            else:
                return self.getTypedRuleContext(ProjectParser.StatementContext,i)


        def getRuleIndex(self):
            return ProjectParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ProjectParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 16
                self.statement()
                self.state = 19 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ProjectParser.BOOL) | (1 << ProjectParser.FLOAT) | (1 << ProjectParser.IF) | (1 << ProjectParser.INT) | (1 << ProjectParser.READ) | (1 << ProjectParser.STRING) | (1 << ProjectParser.WHILE) | (1 << ProjectParser.WRITE) | (1 << ProjectParser.INT_LITERAL) | (1 << ProjectParser.FLOAT_LITERAL) | (1 << ProjectParser.BOOL_LITERAL) | (1 << ProjectParser.STRING_LITERAL) | (1 << ProjectParser.LPAREN) | (1 << ProjectParser.LBRACE) | (1 << ProjectParser.SEMI) | (1 << ProjectParser.NOT) | (1 << ProjectParser.SUB) | (1 << ProjectParser.IDENTIFIER))) != 0)):
                    break

            self.state = 21
            self.match(ProjectParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LITERAL(self):
            return self.getToken(ProjectParser.INT_LITERAL, 0)

        def FLOAT_LITERAL(self):
            return self.getToken(ProjectParser.FLOAT_LITERAL, 0)

        def STRING_LITERAL(self):
            return self.getToken(ProjectParser.STRING_LITERAL, 0)

        def BOOL_LITERAL(self):
            return self.getToken(ProjectParser.BOOL_LITERAL, 0)

        def getRuleIndex(self):
            return ProjectParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = ProjectParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ProjectParser.INT_LITERAL) | (1 << ProjectParser.FLOAT_LITERAL) | (1 << ProjectParser.BOOL_LITERAL) | (1 << ProjectParser.STRING_LITERAL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ProjectParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(ProjectParser.WHILE, 0)
        def LPAREN(self):
            return self.getToken(ProjectParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(ProjectParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(ProjectParser.RPAREN, 0)
        def statement(self):
            return self.getTypedRuleContext(ProjectParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class EmptyStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SEMI(self):
            return self.getToken(ProjectParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyStatement" ):
                listener.enterEmptyStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyStatement" ):
                listener.exitEmptyStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyStatement" ):
                return visitor.visitEmptyStatement(self)
            else:
                return visitor.visitChildren(self)


    class DeclareVariablesContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variableType(self):
            return self.getTypedRuleContext(ProjectParser.VariableTypeContext,0)

        def identifierList(self):
            return self.getTypedRuleContext(ProjectParser.IdentifierListContext,0)

        def SEMI(self):
            return self.getToken(ProjectParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclareVariables" ):
                listener.enterDeclareVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclareVariables" ):
                listener.exitDeclareVariables(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclareVariables" ):
                return visitor.visitDeclareVariables(self)
            else:
                return visitor.visitChildren(self)


    class BlockStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(ProjectParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStatement" ):
                listener.enterBlockStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStatement" ):
                listener.exitBlockStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)


    class WriteExprsContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(ProjectParser.WRITE, 0)
        def exprList(self):
            return self.getTypedRuleContext(ProjectParser.ExprListContext,0)

        def SEMI(self):
            return self.getToken(ProjectParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteExprs" ):
                listener.enterWriteExprs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteExprs" ):
                listener.exitWriteExprs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteExprs" ):
                return visitor.visitWriteExprs(self)
            else:
                return visitor.visitChildren(self)


    class ExprStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ProjectParser.ExprContext,0)

        def SEMI(self):
            return self.getToken(ProjectParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStatement" ):
                listener.enterExprStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStatement" ):
                listener.exitExprStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStatement" ):
                return visitor.visitExprStatement(self)
            else:
                return visitor.visitChildren(self)


    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(ProjectParser.IF, 0)
        def LPAREN(self):
            return self.getToken(ProjectParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(ProjectParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(ProjectParser.RPAREN, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.StatementContext)
            else:
                return self.getTypedRuleContext(ProjectParser.StatementContext,i)

        def ELSE(self):
            return self.getToken(ProjectParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)


    class ReadVariablesContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(ProjectParser.READ, 0)
        def identifierList(self):
            return self.getTypedRuleContext(ProjectParser.IdentifierListContext,0)

        def SEMI(self):
            return self.getToken(ProjectParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadVariables" ):
                listener.enterReadVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadVariables" ):
                listener.exitReadVariables(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadVariables" ):
                return visitor.visitReadVariables(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = ProjectParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ProjectParser.SEMI]:
                localctx = ProjectParser.EmptyStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 25
                self.match(ProjectParser.SEMI)
                pass
            elif token in [ProjectParser.BOOL, ProjectParser.FLOAT, ProjectParser.INT, ProjectParser.STRING]:
                localctx = ProjectParser.DeclareVariablesContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.variableType()
                self.state = 27
                self.identifierList()
                self.state = 28
                self.match(ProjectParser.SEMI)
                pass
            elif token in [ProjectParser.INT_LITERAL, ProjectParser.FLOAT_LITERAL, ProjectParser.BOOL_LITERAL, ProjectParser.STRING_LITERAL, ProjectParser.LPAREN, ProjectParser.NOT, ProjectParser.SUB, ProjectParser.IDENTIFIER]:
                localctx = ProjectParser.ExprStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 30
                self.expr(0)
                self.state = 31
                self.match(ProjectParser.SEMI)
                pass
            elif token in [ProjectParser.READ]:
                localctx = ProjectParser.ReadVariablesContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.match(ProjectParser.READ)
                self.state = 34
                self.identifierList()
                self.state = 35
                self.match(ProjectParser.SEMI)
                pass
            elif token in [ProjectParser.WRITE]:
                localctx = ProjectParser.WriteExprsContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 37
                self.match(ProjectParser.WRITE)
                self.state = 38
                self.exprList()
                self.state = 39
                self.match(ProjectParser.SEMI)
                pass
            elif token in [ProjectParser.LBRACE]:
                localctx = ProjectParser.BlockStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 41
                self.block()
                pass
            elif token in [ProjectParser.IF]:
                localctx = ProjectParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 42
                self.match(ProjectParser.IF)
                self.state = 43
                self.match(ProjectParser.LPAREN)
                self.state = 44
                self.expr(0)
                self.state = 45
                self.match(ProjectParser.RPAREN)
                self.state = 46
                self.statement()
                self.state = 49
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 47
                    self.match(ProjectParser.ELSE)
                    self.state = 48
                    self.statement()


                pass
            elif token in [ProjectParser.WHILE]:
                localctx = ProjectParser.WhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 51
                self.match(ProjectParser.WHILE)
                self.state = 52
                self.match(ProjectParser.LPAREN)
                self.state = 53
                self.expr(0)
                self.state = 54
                self.match(ProjectParser.RPAREN)
                self.state = 55
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(ProjectParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ProjectParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.StatementContext)
            else:
                return self.getTypedRuleContext(ProjectParser.StatementContext,i)


        def getRuleIndex(self):
            return ProjectParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ProjectParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(ProjectParser.LBRACE)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ProjectParser.BOOL) | (1 << ProjectParser.FLOAT) | (1 << ProjectParser.IF) | (1 << ProjectParser.INT) | (1 << ProjectParser.READ) | (1 << ProjectParser.STRING) | (1 << ProjectParser.WHILE) | (1 << ProjectParser.WRITE) | (1 << ProjectParser.INT_LITERAL) | (1 << ProjectParser.FLOAT_LITERAL) | (1 << ProjectParser.BOOL_LITERAL) | (1 << ProjectParser.STRING_LITERAL) | (1 << ProjectParser.LPAREN) | (1 << ProjectParser.LBRACE) | (1 << ProjectParser.SEMI) | (1 << ProjectParser.NOT) | (1 << ProjectParser.SUB) | (1 << ProjectParser.IDENTIFIER))) != 0):
                self.state = 60
                self.statement()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(ProjectParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ProjectParser.IDENTIFIER)
            else:
                return self.getToken(ProjectParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ProjectParser.COMMA)
            else:
                return self.getToken(ProjectParser.COMMA, i)

        def getRuleIndex(self):
            return ProjectParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = ProjectParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(ProjectParser.IDENTIFIER)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ProjectParser.COMMA:
                self.state = 69
                self.match(ProjectParser.COMMA)
                self.state = 70
                self.match(ProjectParser.IDENTIFIER)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.ExprContext)
            else:
                return self.getTypedRuleContext(ProjectParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ProjectParser.COMMA)
            else:
                return self.getToken(ProjectParser.COMMA, i)

        def getRuleIndex(self):
            return ProjectParser.RULE_exprList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprList" ):
                listener.enterExprList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprList" ):
                listener.exitExprList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprList" ):
                return visitor.visitExprList(self)
            else:
                return visitor.visitChildren(self)




    def exprList(self):

        localctx = ProjectParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.expr(0)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ProjectParser.COMMA:
                self.state = 77
                self.match(ProjectParser.COMMA)
                self.state = 78
                self.expr(0)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(ProjectParser.BOOL, 0)

        def INT(self):
            return self.getToken(ProjectParser.INT, 0)

        def FLOAT(self):
            return self.getToken(ProjectParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(ProjectParser.STRING, 0)

        def getRuleIndex(self):
            return ProjectParser.RULE_variableType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableType" ):
                listener.enterVariableType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableType" ):
                listener.exitVariableType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableType" ):
                return visitor.visitVariableType(self)
            else:
                return visitor.visitChildren(self)




    def variableType(self):

        localctx = ProjectParser.VariableTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ProjectParser.BOOL) | (1 << ProjectParser.FLOAT) | (1 << ProjectParser.INT) | (1 << ProjectParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ProjectParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MulDivModContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.ExprContext)
            else:
                return self.getTypedRuleContext(ProjectParser.ExprContext,i)

        def MUL(self):
            return self.getToken(ProjectParser.MUL, 0)
        def DIV(self):
            return self.getToken(ProjectParser.DIV, 0)
        def MOD(self):
            return self.getToken(ProjectParser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivMod" ):
                listener.enterMulDivMod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivMod" ):
                listener.exitMulDivMod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivMod" ):
                return visitor.visitMulDivMod(self)
            else:
                return visitor.visitChildren(self)


    class VariableExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(ProjectParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableExpr" ):
                listener.enterVariableExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableExpr" ):
                listener.exitVariableExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableExpr" ):
                return visitor.visitVariableExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(ProjectParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(ProjectParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(ProjectParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParExpr" ):
                listener.enterParExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParExpr" ):
                listener.exitParExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParExpr" ):
                return visitor.visitParExpr(self)
            else:
                return visitor.visitChildren(self)


    class LogicalNotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ProjectParser.ExprContext,0)

        def NOT(self):
            return self.getToken(ProjectParser.NOT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalNot" ):
                listener.enterLogicalNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalNot" ):
                listener.exitLogicalNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalNot" ):
                return visitor.visitLogicalNot(self)
            else:
                return visitor.visitChildren(self)


    class EqualNotEqualContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.ExprContext)
            else:
                return self.getTypedRuleContext(ProjectParser.ExprContext,i)

        def EQUAL(self):
            return self.getToken(ProjectParser.EQUAL, 0)
        def NOTEQUAL(self):
            return self.getToken(ProjectParser.NOTEQUAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualNotEqual" ):
                listener.enterEqualNotEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualNotEqual" ):
                listener.exitEqualNotEqual(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualNotEqual" ):
                return visitor.visitEqualNotEqual(self)
            else:
                return visitor.visitChildren(self)


    class AddSubConcatContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.ExprContext)
            else:
                return self.getTypedRuleContext(ProjectParser.ExprContext,i)

        def ADD(self):
            return self.getToken(ProjectParser.ADD, 0)
        def SUB(self):
            return self.getToken(ProjectParser.SUB, 0)
        def CONCAT(self):
            return self.getToken(ProjectParser.CONCAT, 0)
